--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':Widget')
-
-    compile 'com.android.support:appcompat-v7:24.1.0'
+    compile project(':customview')
 }
