--- a/customview/src/main/AndroidManifest.xml
+++ b/customview/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.jinwidget">
+          package="com.customview">
 
     <application
         android:allowBackup="true"
