TailsTextLayout 增加前后缀颜色定义

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
 
         <activity android:name=".MinePersonalSettingsActivity"/>
+        <activity android:name=".TailsTextLayoutTestActivity"/>
     </application>
 
 </manifest>
