--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".MinePersonalSettingsActivity"/>
         <activity android:name=".TailsTextLayoutTestActivity"/>
         <activity android:name=".TestLoadView"/>
+        <activity android:name=".JRecyclerViewTest"/>
     </application>
 
 </manifest>
