--- a/custom-view/build.gradle
+++ b/custom-view/build.gradle
@@ -11,8 +11,8 @@ ext {
     siteUrl = 'https://github.com/kj387948407/JinWidget'
     gitUrl = 'https://github.com/kj387948407/JinWidget.git'
 
-    libraryVersion = '1.0.7'
-    libraryDescription = 'add TailsTextLayout textColor control && fix'
+    libraryVersion = '1.1.0'
+    libraryDescription = 'add LoadView && JRecyclerView'
 
     developerId = 'jin'
     developerName = 'Jin Feng'
