--- a/custom-view/build.gradle
+++ b/custom-view/build.gradle
@@ -11,8 +11,8 @@ ext {
     siteUrl = 'https://github.com/kj387948407/JinWidget'
     gitUrl = 'https://github.com/kj387948407/JinWidget.git'
 
-    libraryVersion = '1.1.2'
-    libraryDescription = 'add LoadView && JRecyclerView (Item Decoration)'
+    libraryVersion = '1.1.3'
+    libraryDescription = 'add LoadView && JRecyclerView (Item Decoration) _fix'
 
     developerId = 'jin'
     developerName = 'Jin Feng'
