--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".TailsTextLayoutTestActivity"/>
         <activity android:name=".TestLoadView"/>
         <activity android:name=".JRecyclerViewTest"/>
+        <activity android:name=".SuperTextTestActivity"/>
     </application>
 
 </manifest>
