--- a/custom-view/build.gradle
+++ b/custom-view/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 ext {
     bintrayRepo = 'maven'
@@ -12,8 +11,8 @@ ext {
     siteUrl = 'https://github.com/kj387948407/JinWidget'
     gitUrl = 'https://github.com/kj387948407/JinWidget.git'
 
-    libraryVersion = '1.2.0'
-    libraryDescription = 'add SuperText'
+    libraryVersion = '1.1.4'
+    libraryDescription = 'tailsTextView add line under'
 
     developerId = 'jin'
     developerName = 'Jin Feng'
@@ -40,9 +39,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
 }
 
 dependencies {
@@ -51,11 +47,7 @@ dependencies {
     compile 'com.android.support:support-annotations:24.1.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
-repositories {
-    mavenCentral()
-}
