--- a/custom-view/build.gradle
+++ b/custom-view/build.gradle
@@ -11,8 +11,8 @@ ext {
     siteUrl = 'https://github.com/kj387948407/JinWidget'
     gitUrl = 'https://github.com/kj387948407/JinWidget.git'
 
-    libraryVersion = '1.1.4'
-    libraryDescription = 'tailsTextView add line under'
+    libraryVersion = '1.3.0'
+    libraryDescription = 'nothing'
 
     developerId = 'jin'
     developerName = 'Jin Feng'
