--- a/custom-view/build.gradle
+++ b/custom-view/build.gradle
@@ -11,8 +11,8 @@ ext {
     siteUrl = 'https://github.com/kj387948407/JinWidget'
     gitUrl = 'https://github.com/kj387948407/JinWidget.git'
 
-    libraryVersion = '1.3.0'
-    libraryDescription = 'nothing'
+    libraryVersion = '1.3.2'
+    libraryDescription = 'fix bg color'
 
     developerId = 'jin'
     developerName = 'Jin Feng'
