--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.widget.ali.AliMainActivity">
+        <activity android:name=".demo.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,6 +27,9 @@
         <activity android:name=".demo.title.TitleViewTest2Activity"/>
         <activity android:name=".demo.title.TitleViewTestNormalActivity"/>
         <activity android:name=".demo.title.TitleViewTestAttachActivity" android:theme="@style/AppTheme.NoActionBar" />
+
+        <!-- ali go -->
+        <activity android:name=".ali.dispatched.DispatchActivity"/>
     </application>
 
 </manifest>
