--- a/custom-view/build.gradle
+++ b/custom-view/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 
 ext {
     bintrayRepo = 'maven'
@@ -11,7 +12,7 @@ ext {
     siteUrl = 'https://github.com/kj387948407/JinWidget'
     gitUrl = 'https://github.com/kj387948407/JinWidget.git'
 
-    libraryVersion = '1.4.11'
+    libraryVersion = '1.4.12'
     libraryDescription = 'Title View && fix JRecyclerView && add TextMoreLayout bugs'
 
     developerId = 'jin'
