--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':custom-view')
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.8.5'
+    implementation project(':utils')
 }
